# password_manager

./: Cargo.toml
src/: app.rs  key_derivation.rs  main.rs  vault.rs  vault_entry.rs  vault_header.rs
src/ui/: center_left.rs  file_selector.rs  mod.rs  top.rs
