[package]
name = "password-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
rand = "0.8"
hmac = "0.12.1"
sha2 = "0.10"
subtle = "2.6"
aes-gcm = "0.10"
ratatui = "0.30.0"
color-eyre = "0.6.3"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
